# BackEnd/src/api/routes/orderRouter.js
@@ -3,6 +3,12 @@ const { verifyAccessToken } = require("../middlewares/authenticate");
 const orderControler = require("../controllers/orderController");
 
 router.post("/createOrder", verifyAccessToken, orderControler.createOrder);
-router.patch("/confirmOrder/:id", verifyAccessToken, orderControler.confirmOrder);
+router.patch(
+  "/confirmOrder/:id",
+  verifyAccessToken,
+  orderControler.confirmOrder
+);
 router.get("/getAllOrder", verifyAccessToken, orderControler.getAllOrder);
+router.get("/getOrderUser", verifyAccessToken, orderControler.getOrderUser);
+router.get("/getOrderId/:id", verifyAccessToken, orderControler.getOrderId);
 module.exports = router;
