# BackEnd/src/api/swagger/api/openapi.yaml
@@ -2339,6 +2339,56 @@ paths:
           content: {}
       security:
         - JWT: []
+  /api/order/getOrderUser:
+    get:
+      tags:
+        - order
+      summary: get all order user
+      operationId: get all order user
+      responses:
+        "200":
+          description: Success
+          content: {}
+        "400":
+          description: Bad Request
+          content: {}
+        "401":
+          description: UnAuthorized
+          content: {}
+        "404":
+          description: Not found
+          content: {}
+      security:
+        - JWT: []
+  /api/order/getOrderId/{orderId}:
+    get:
+      tags:
+        - order
+      summary: get  order id
+      operationId: get order id
+      parameters:
+        - name: orderId
+          in: path
+          description: Please provide orderId
+          required: true
+          schema:
+            type: string
+            example: "1"
+      responses:
+        "200":
+          description: Success
+          content: {}
+        "400":
+          description: Bad Request
+          content: {}
+        "401":
+          description: UnAuthorized
+          content: {}
+        "404":
+          description: Not found
+          content: {}
+      security:
+        - JWT: []
 
 components:
   schemas:
